# reward-accumulator

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: consts.rs  instruction.rs  lib.rs  sdk.rs
program/: Cargo.toml
program/src/: claim.rs  lib.rs
program/tests/: functional.rs
ts-sdk/: index.ts  package.json
